syntax = "proto3";
package twitchchat;

option go_package = "github.com/autonomouskoi/trackstar/twitchchat";

enum BusTopics {
    TRACKSTAR_TWITCH_CHAT_EVENT   = 0;
    TRACKSTAR_TWITCH_CHAT_REQUEST = 1;
    TRACKSTAR_TWITCH_CHAT_COMMAND = 2;
}

enum MessageTypeRequest {
    TRACKSTAR_TWITCH_CHAT_CONFIG_GET_REQ      = 0;
    TRACKSTAR_TWITCH_CHAT_CONFIG_GET_RESP     = 1;
    TRACKSTAR_TWITCH_CHAT_TRACK_ANNOUNCE_REQ  = 2;
    TRACKSTAR_TWITCH_CHAT_TRACK_ANNOUNCE_RESP = 3;
}

enum MessageTypeCommand {
    TRACKSTAR_TWITCH_CHAT_UNSPECIFIED     = 0;    
    TRAKCSTAR_TWITCH_CHAT_CONFIG_SET_REQ  = 1;
    TRAKCSTAR_TWITCH_CHAT_CONFIG_SET_RESP = 2;
}

message Config {
    bool    announce = 1;
    string  template = 2;
}

message ConfigGetRequest {}
message ConfigGetResponse {
    Config  config = 1;
}

message ConfigSetRequest {
    Config  config = 1;
}
message ConfigSetResponse {
    Config  config = 1;
}

message TrackAnnounceRequest {}
message TrackAnnounceResponse {}